--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+        <div id = "left-side">
+            <img class ="image" src="/images/blossomtree.avif" alt="blossomTree">
+            <div class="overlay">
+                <h2>Online Market</h2>
+            </div>
+        </div>
+        <div id = "right-side">
+            <div class ="first">
+                <p>This is not a real online service. You know you need something<br> like this in your life to realise your dreams deepest
+                    dreams.<br> sign up now to get started.<br><br> You know you want to.
+                </p>
+            </div>
+            <div id="mid">
+               <form action=""id="signupForm" method="post">
+                        <h2>Sign up</h2>
+
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName" placeholder="First Name" required>
+
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName" placeholder="Last Name" required>
+
+                        <label for="email">Email</label>
+                        <input type="email" id="email" placeholder="Email" required>
+
+                        <label for="phoneNumber">Phone Number</label>
+                        <input type="number" id="phoneNumber" placeholder="Phone Number" required>
+
+                        <label for="password">Password</label>
+                        <input type="password" id="password" placeholder="Password" required>
+
+                        <label for="confirmPassword">Confirm Password</label>
+                        <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+
+                        </form>
+            </div>
+            <div class ="third">
+                <button id="submitBtn" type="submit">Sign Up</button><br><br>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
+        </div>
 </body>
 </html>
